// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`init.behavior.scaffold given: [case3] direct: unbound branch when: [t0] init.behavior executed then: auto-binds current branch to created behavior 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.stone
   ├─ + 3.1.1.research.external.product.claims._.stone
   ├─ + 3.1.1.research.external.product.flagged._.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.stone
   ├─ + 3.1.3.research.internal.product.code.test._.stone
   ├─ + 3.1.5.research.reflection.product.audience._.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.stone
   ├─ + 3.2.distill.repros.experience._.guard
   ├─ + 3.2.distill.repros.experience._.stone
   ├─ + 3.3.1.blueprint.product.guard
   ├─ + 3.3.1.blueprint.product.stone
   ├─ + 4.1.roadmap.stone
   ├─ + 5.1.execution.phase0_to_phaseN.guard
   ├─ + 5.1.execution.phase0_to_phaseN.stone
   ├─ + 5.2.evaluation.guard
   ├─ + 5.2.evaluation.stone
   ├─ + 5.3.verification.guard
   ├─ + 5.3.verification.stone
   ├─ + 5.5.playtest.guard
   ├─ + 5.5.playtest.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.auto-bind-test/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/auto-bind <-> behavior v{DATE}.auto-bind-test
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.scaffold given: [case3] direct: unbound branch when: [t0] init.behavior executed then: auto-binds current branch to created behavior 2`] = `""`;

exports[`init.behavior.scaffold given: [case3] direct: unbound branch when: [t0] init.behavior executed then: creates behavior directory with all scaffold files 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.stone
   ├─ + 3.1.1.research.external.product.claims._.stone
   ├─ + 3.1.1.research.external.product.flagged._.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.stone
   ├─ + 3.1.3.research.internal.product.code.test._.stone
   ├─ + 3.1.5.research.reflection.product.audience._.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.stone
   ├─ + 3.2.distill.repros.experience._.guard
   ├─ + 3.2.distill.repros.experience._.stone
   ├─ + 3.3.1.blueprint.product.guard
   ├─ + 3.3.1.blueprint.product.stone
   ├─ + 4.1.roadmap.stone
   ├─ + 5.1.execution.phase0_to_phaseN.guard
   ├─ + 5.1.execution.phase0_to_phaseN.stone
   ├─ + 5.2.evaluation.guard
   ├─ + 5.2.evaluation.stone
   ├─ + 5.3.verification.guard
   ├─ + 5.3.verification.stone
   ├─ + 5.5.playtest.guard
   ├─ + 5.5.playtest.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.test-behavior/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/new-behavior-test <-> behavior v{DATE}.test-behavior
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.scaffold given: [case3] direct: unbound branch when: [t0] init.behavior executed then: creates behavior directory with all scaffold files 2`] = `""`;

exports[`init.behavior.scaffold given: [case4] direct: branch already bound to a behavior when: [t0] init.behavior executed then: fails fast with helpful error 1`] = `""`;

exports[`init.behavior.scaffold given: [case4] direct: branch already bound to a behavior when: [t0] init.behavior executed then: fails fast with helpful error 2`] = `
"✋ ✋ ConstraintError: branch 'feature/already-bound-test' is already bound to: v{DATE}.first-behavior

{
  "hint": "to create a new behavior, use a new tree: git tree set --from main --open <branch-name-new>",
  "currentBranch": "feature/already-bound-test",
  "boundTo": "/tmp/test-fns/{REPO}/.temp/{TEMP}/.behavior/v{DATE}.first-behavior",
  "attempted": "/tmp/test-fns/{REPO}/.temp/{TEMP}/.behavior/v{DATE}.second-behavior"
}

to create a new behavior, use a new tree: git tree set --from main --open <branch-name-new>"
`;
